--- a/solution.html
+++ b/solution.html
@@ -1,3 +1,11 @@
+---
+layout: article
+title: Solutions
+permalink: /solutions.html
+sidebar:
+    nav: solutions
+---
+
 {% extends "bootstrap/base.html" %}
 {% block title %}
     NoHandBlogger
