--- a/solutions.html
+++ b/solutions.html
@@ -21,7 +21,7 @@ Article list with cover and excerpt.
 
     ---
     layout: articles
-    title: Articles - Item (Cover + Excerpt)
+    title: Solutions
     articles:
       data_source: site.solutions
       show_excerpt: true
