--- a/solutions.html
+++ b/solutions.html
@@ -11,20 +11,6 @@ articles:
 
 <div class="article__content" markdown="1">
 
----
-
-Article list with cover and excerpt.
-
-<!--more-->
-
-**front matter:**
-
-    ---
-    layout: articles
-    title: Solutions
-    articles:
-      data_source: site.solutions
-      show_excerpt: true
-    ---
+{{ content }}
 
 </div>
