--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,11 @@
 ---
-layout: page
+layout: articles
 title: Portfolio
 permalink: /portfolio.html
 ---
 <div class="layout--articles">
   <section class="my-5">
     <header><h2 id="page-layout">Page Layout</h2></header>
-    {%- include article-list.html articles=site.sample_page type='grid' -%}
-  </section>
-
-  <section class="my-5">
-    <header><h2 id="articles-layout">Articles(Home) Layout</h2></header>
-    {%- include article-list.html articles=site.sample_articles type='grid' -%}
-  </section>
-
-  <section class="my-5">
-    <header><h2 id="languages">Languages</h2></header>
-    {%- include article-list.html articles=site.sample_languages type='grid' size='sm' -%}
+    {%- include article-list.html articles=site.posts type='grid' -%}
   </section>
 </div>
