--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,6 @@ permalink: /portfolio.html
 <div class="layout--articles">
   <section class="my-5">
     <header><h2 id="page-layout">Page Layout</h2></header>
-    {%- include article-list.html articles=site.posts type='grid' -%}
+    {%- include article-list.html articles=site.posts type='brief' -%}
   </section>
 </div>
