--- a/navigationBar.html
+++ b/navigationBar.html
@@ -1,3 +1,7 @@
+---
+layout: none
+---
+
 {% block navbar %}
     <div class="navbar navbar-inverse" role="navigation">
             <div class="navbar-header">
